--- a/login.html
+++ b/login.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - Reduzsíduo</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="responsividade.css">
   <script src="src/js/scriptLogin.js" defer></script>
 </head>
+
 <body style="background-color: #eaf8ef;">
   <main class="login">
     <div class="card-login">
@@ -27,4 +30,5 @@
     </div>
   </main>
 </body>
+
 </html>
