--- a/educacao.html
+++ b/educacao.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Educação Ambiental - Reduzsíduo</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="responsividade.css">
   <script src="src/js/script.js" defer></script>
 </head>
 
